Verif/Test/Invalide/test_erreur_3.86+3.87-6.deca
// Description:
//    Programme soulevant l'erreur (3.86/3.87)
// Resultats:
//    Erreur contextuelle
//    Ligne 16 : Objet attendu à gauche de '.' (règle 3.86 / 3.87)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012


int y;

{
 y = true.x;
} 